# one-liner

./: CHANGELOG  LICENSE  README  README.markdown  cabal.project  one-liner.cabal
.github/workflows/: haskell-ci.yml
examples/: defaultsignature.hs  freevars.hs  freevars1.hs  lenses.hs  paradise.hs  realworld.hs  tinplate.hs  unification.hs
src/Generics/: OneLiner.hs
src/Generics/OneLiner/: ADT.hs  ADT1.hs  Binary.hs  Classes.hs  Functions.hs  Functions1.hs  Info.hs  Internal.hs
src/Generics/OneLiner/Internal/: Unary.hs
test/: unittests.hs
