Name:                 one-liner
Version:              0.6
Synopsis:             Constraint-based generics
Description:          Write short and concise generic instances of type classes.
                      .
                      There are two separate parts: @Generics.OneLiner@ is for
                      writing generic functions using @GHC.Generics@.
                      The other modules show how to implement these same generic
                      functions with a traversal-style generics type class,
                      without the use of an intermediate generic representation
                      type.
Homepage:             https://github.com/sjoerdvisscher/one-liner
Bug-reports:          https://github.com/sjoerdvisscher/one-liner/issues
License:              BSD3
License-file:         LICENSE
Author:               Sjoerd Visscher
Maintainer:           sjoerd@w3future.com
Category:             Generics
Build-type:           Simple
Cabal-version:        >= 1.6

Extra-Source-Files:
  examples/*.hs

Library
  HS-Source-Dirs:  src

  Exposed-modules:
    Generics.OneLiner
    Generics.OneLiner.Internal

  Build-depends:
      base          >= 4.9 && < 5
    , transformers  >= 0.5 && < 0.6
    , contravariant >= 1.4 && < 1.5
    , ghc-prim      >= 0.5 && < 1.0
    , profunctors   >= 5.2 && < 6.0

source-repository head
  type:     git
  location: git://github.com/sjoerdvisscher/one-liner.git
