Name:                 one-liner
Version:              1.0
Synopsis:             Constraint-based generics
Description:          Write short and concise generic instances of type classes.
                      one-liner is particularly useful for writing default
                      implementations of type class methods.
Homepage:             https://github.com/sjoerdvisscher/one-liner
Bug-reports:          https://github.com/sjoerdvisscher/one-liner/issues
License:              BSD3
License-file:         LICENSE
Author:               Sjoerd Visscher, Xia Li-yao
Maintainer:           sjoerd@w3future.com
Category:             Generics
Build-type:           Simple
Cabal-version:        >= 1.8

Extra-Source-Files:
  examples/*.hs
  CHANGELOG

Library
  HS-Source-Dirs:  src

  Exposed-modules:
    Generics.OneLiner
    Generics.OneLiner.Binary
    Generics.OneLiner.Classes
    Generics.OneLiner.Internal
    Generics.OneLiner.Internal.Unary

  Build-depends:
      base          >= 4.9 && < 5
    , transformers  >= 0.5 && < 0.6
    , contravariant >= 1.4 && < 1.5
    , ghc-prim      >= 0.5 && < 1.0
    , bifunctors    >= 5.4 && < 6.0
    , profunctors   >= 5.2 && < 6.0
    , tagged        >= 0.8 && < 0.9

source-repository head
  type:     git
  location: git://github.com/sjoerdvisscher/one-liner.git

Test-suite unittests
  Hs-source-dirs:  test
  Main-is:         unittests.hs

  Build-depends:
      base
    , contravariant
    , HUnit
    , one-liner

  Type: exitcode-stdio-1.0
